Add endpoint support
